InstallVerifier: enable testing on Chromium trybots

The ExtensionInstallVerification entry in fieldtrial_testing_config.json
claims that the experiment is enabled on mac and win. This is a red
herring: the InstallVerifier's GetExperimentStatus logic is surrounded by
a #if defined(GOOGLE_CHROME_BUILD) block. Despite the fieldtrial testing
config, Install Verification is always disabled on Chromium trybots.

This change should unify the behavior tested by the Chromium and Chrome
bots.

Bug: 777297
Change-Id: Ia4376f678508568feaab338a10f4ad2a4206e39a
Reviewed-on: https://chromium-review.googlesource.com/733504
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Commit-Queue: proberge <proberge@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511209}